--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -212,6 +212,19 @@ h1 {
 	margin-top: 20px;
 }
 
+.fa-exclamation-triangle {
+	color: #e74c3c;
+}
+
+.report a {
+	text-decoration: none;
+	color: black;
+}
+
+.report {
+	float: right;
+}
+
 
 /* _________________ LOGIN ________________ */
 
